fully implement module config file generation through circuits