@@ -1,24 +1,27 @@
 package cd4017be.dfc.lang;
 
+import static java.nio.file.Files.readAllBytes;
+
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.file.Path;
 
 /**
  * 
  * @author CD4017BE */
 public class PluginClassLoader extends ClassLoader {
 
-	private final URL path;
+	private final Path path;
 
-	public PluginClassLoader(URL path) {
+	public PluginClassLoader(Path path) {
 		this.path = path;
 	}
 
 	@Override
 	protected URL findResource(String name) {
 		try {
-			return new URL(path, name);
+			return path.resolve(name).toUri().toURL();
 		} catch(MalformedURLException e) {
 			return null;
 		}
@@ -27,7 +30,7 @@ public class PluginClassLoader extends ClassLoader {
 	@Override
 	protected Class<?> findClass(String name) throws ClassNotFoundException {
 		try {
-			byte[] data = CircuitFile.loadResource(findResource(name + ".class"), 1 << 24);
+			byte[] data = readAllBytes(path.resolve(name + ".class"));
 			return defineClass(name, data, 0, data.length);
 		} catch (IOException e) {
 			throw new ClassNotFoundException(null, e);
